# blog

./: .gitignore  .pylintrc  README.md  make.bat  make.py  pyproject.toml
assets/: package-lock.json  package.json  tailwind.config.js  webpack.config.js
assets/src/: index.js
lib/papyrus/contrib/jinja_detective/: __init__.py
lib/papyrus/contrib/jinja_detective/templates/: jinja_hazmat.html
lib/papyrus/contrib/jinja_hazmat/: __init__.py
source/: conf.py  index.rst
source/blog/: hello-world.rst
