[tool.poetry]
name = "blog"
version = "0"
description = ""
authors = ["Selim Belhaouane <selim.belhaouane@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = ">=3.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
