[tool.poetry]
name = "blog"
version = "0"
description = ""
authors = ["Selim Belhaouane <selim.belhaouane@gmail.com>"]
packages = [
    { include = "papyrus", from = "lib" },
]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = ">=3.5.4"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^21.4b0"
pylint = "^2.8.2"
isort = "^5.8.0"
typer = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110